# coapum

./: .gitignore  CLAUDE.md  CONSOLIDATION_SUMMARY.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Readme.md  data.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cross-platform.yml  examples.yml  performance.yml  release.yml
benches/: push_bench.rs  router_bench.rs  rps_bench.rs
coapum-senml/: Cargo.toml
coapum-senml/src/: builder.rs  cbor.rs  error.rs  json.rs  lib.rs  normalize.rs  pack.rs  record.rs  validation.rs  xml.rs
dev/bench/: data.js
docs/: ANALYSIS_PROMPT.md  codecov-setup.md  custom-backends.md  gaps.md
examples/: cbor_client.rs  cbor_server.rs  concurrency.rs  dynamic_client_management.rs  external_state_updates.rs  layered_server.rs  raw_client.rs  raw_server.rs  senml_example.rs  senml_simple.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cbor_deser.rs  coap_parse.rs  identity_validate.rs  json_deser.rs  observer_path.rs
hooks/: install.sh  pre-commit
src/: client.rs  error.rs  helper.rs  lib.rs  reliability.rs  serve.rs  serve_with_client_manager.rs  service.rs  test_utils.rs
src/config/: mod.rs
src/credential/: memory.rs  mod.rs  resolver.rs
src/extract/: block.rs  mod.rs  path.rs  payload.rs  state.rs
src/extractor/: cbor.rs  json.rs  mod.rs  raw.rs
src/handler/: mod.rs
src/middleware/: map_response.rs  mod.rs  timeout.rs  trace.rs
src/observer/: memory.rs  mod.rs  observer.rs  redb.rs  sled.rs  subscriber.rs
src/router/: layered.rs  mod.rs  wrapper.rs
src/router/wrapper/: mod.rs  observer.rs
src/routing/: mod.rs
src/serve/: client_mgmt.rs  connection.rs  handle.rs  handlers.rs  helpers.rs  mod.rs  router_handle.rs
src/tests/: mod.rs
tests/: block2_manual_tests.rs  block_transfer_tests.rs  cid_migration_tests.rs  client_manager_tests.rs  error_path_coverage.rs  example_integration_tests.rs  handler_advanced_tests.rs  handler_trait_coverage.rs  layered_router_tests.rs  observe_integration.rs  observe_push_notifications.rs  redb_observer_integration.rs  rfc7252_compliance_tests.rs  security_tests.rs  server_comprehensive_tests.rs  shutdown_api.rs  simple_handler_tests.rs  state_update_core_tests.rs
