[package]
name = "coapum"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Jared Wolff <jared@jaredwolff.com>"]
description = "A modern, ergonomic CoAP (Constrained Application Protocol) library for Rust with support for DTLS, observers, and asynchronous handlers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jaredwolff/coapum"
documentation = "https://docs.rs/coapum"
homepage = "https://github.com/jaredwolff/coapum"
keywords = ["coap", "iot", "dtls", "async", "sensor"]
categories = ["network-programming", "embedded", "api-bindings", "asynchronous"]
readme = "README.md"

[features]
default = ["sled-observer"]
sled-observer = ["sled"]

[dependencies]
async-trait = "0.1.89"
ciborium = "0.2.2"
coap-lite = "0.13.3"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
route-recognizer = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = [
    "tokio",
    "tokio-stream",
    "tokio-util",
] }

# Optional
sled = { version = "0.34.7", optional = true }

# DTLS
webrtc-dtls = { version = "0.12" }
webrtc-util = { version = "0.11" }

# SenML
coapum-senml = { version = "0.1.0", path = "./coapum-senml" }


[dev-dependencies]
lazy_static = { version = "1.4.0" }
criterion = { version = "0.7.0" }

[[bench]]
name = "router_bench"
harness = false
