[package]
name = "coapum"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Jared Wolff <jared@jaredwolff.com>"]
description = "A modern, ergonomic CoAP (Constrained Application Protocol) library for Rust with support for DTLS, observers, and asynchronous handlers"
license.workspace = true
repository = "https://github.com/jaredwolff/coapum"
documentation = "https://docs.rs/coapum"
homepage = "https://github.com/jaredwolff/coapum"
keywords = ["coap", "iot", "dtls", "async", "sensor"]
categories = ["network-programming", "embedded", "api-bindings", "asynchronous"]
readme = "README.md"

[features]
default = []
sled-observer = ["sled"]
redb-observer = ["redb"]
test-utils = []

[dependencies]
async-trait = "0.1.89"
ciborium = { workspace = true }
coap-lite = "0.13.3"
env_logger = "0.11.8"
futures = { workspace = true }
log = { workspace = true }
route-recognizer = "0.3.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.5.2", features = [
    "tokio",
    "tokio-stream",
    "tokio-util",
] }

# Optional
sled = { version = "0.34.7", optional = true }
redb = { version = "3.0.0", optional = true }

# DTLS
webrtc-dtls = { version = "0.12" }
webrtc-util = { version = "0.11" }

# SenML
coapum-senml = { path = "./coapum-senml" }


[dev-dependencies]
lazy_static = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
coapum = { path = ".", features = ["test-utils"] }

[[bench]]
name = "router_bench"
harness = false

[workspace]
resolver = "2"
members = [
    ".",
    "coapum-senml",
]

# Centralize common dependency versions across workspace members.
[workspace.dependencies]
serde = { version = "1.0" }
serde_json = { version = "1.0" }
ciborium = { version = "0.2" }
tokio = { version = "1.47.1" }
futures = { version = "0.3.31" }
log = { version = "0.4.27" }
criterion = { version = "0.7.0" }
lazy_static = { version = "1.4.0" }
tempfile = { version = "3.15.0" }
tokio-test = { version = "0.4" }

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
