[package]
name = "coapum-senml"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["CoAPum Contributors"]
description = "Rust implementation of Sensor Measurement Lists (SenML) RFC 8428"
license.workspace = true
repository = "https://github.com/coapum/coapum-senml"
documentation = "https://docs.rs/coapum-senml"
keywords = ["senml", "sensor", "iot", "coap", "rfc8428"]
categories = ["encoding", "data-structures", "embedded"]

[features]
default = ["json", "cbor"]
json = ["serde_json"]
cbor = ["ciborium"]
xml = ["quick-xml", "serde-xml-rs"]
validation = ["validator"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }

# Optional serialization formats
serde_json = { workspace = true, optional = true }
ciborium = { workspace = true, optional = true }
quick-xml = { version = "0.39", optional = true }
serde-xml-rs = { version = "0.8", optional = true }

# Optional validation
validator = { version = "0.20", optional = true, features = ["derive"] }

[dev-dependencies]
tokio-test = { workspace = true }
